--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body {
 div {
   width: 700px;
   margin: auto;
-  font-family: "Helvetica Neue"
-  background: #ffffff;
+  font-family: "Helvetica Neue";
+  background: white;
   padding: 30px;
 }
 
